[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "forthic"
authors = [{name = "Rino Jose", email = "rjose@forthix.com"}]
license = {file = "LICENSE"}
readme = "README.md"
version = "4.0.0"
description = "A stack-based language for concisely building tweakable apps"
dependencies = [
    "urllib3",
    "pytz",
    "cryptography",
    "python-dateutil",
    "requests-oauthlib",
    "Jinja2",
    "Markdown",
]

[project.urls]
Home = "https://github.com/linkedin/forthic"


